# Application-Qt-QML-Module-Design-Demo

./: .gitignore  Application-QML-Module.qmlproject  CMakeLists.txt  LICENSE  README.md  main.qml  qmlmodules
qml/: CMakeLists.txt
qml/TEST/: CMakeLists.txt  Logo.qml  Screen01.ui.qml  TestDisplay.qml
src/: main.cpp  mainwindow.cpp  mainwindow.ui
